--- a/package.json
+++ b/package.json
@@ -21,14 +21,19 @@
 		"@sveltejs/vite-plugin-svelte": "^3.0.2",
 		"@typescript-eslint/eslint-plugin": "^6.21.0",
 		"@typescript-eslint/parser": "^6.21.0",
+		"autoprefixer": "^10.4.19",
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
 		"mdsvex": "^0.11.0",
+		"postcss": "^8.4.38",
+		"postcss-load-config": "^5.0.2",
 		"prettier": "^3.2.5",
 		"prettier-plugin-svelte": "^3.2.2",
+		"prettier-plugin-tailwindcss": "^0.5.9",
 		"svelte": "^4.2.12",
 		"svelte-check": "^3.6.8",
+		"tailwindcss": "^3.4.3",
 		"tslib": "^2.6.2",
 		"typescript": "^5.4.3",
 		"vite": "^5.2.7"
@@ -36,6 +41,8 @@
 	"dependencies": {
 		"@fontsource/jetbrains-mono": "^5.0.19",
 		"@fontsource/manrope": "^5.0.19",
+		"flowbite-svelte": "^0.44.24",
+		"flowbite-svelte-icons": "^1.5.0",
 		"lucide-svelte": "^0.323.0",
 		"open-props": "^1.6.21",
 		"rehype-slug": "^6.0.0",
