--- a/.prettierrc
+++ b/.prettierrc
@@ -4,7 +4,11 @@
 	"singleQuote": true,
 	"trailingComma": "none",
 	"printWidth": 100,
-	"plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
+	"plugins": [
+		"prettier-plugin-svelte",
+		"prettier-plugin-tailwindcss",
+		"prettier-plugin-tailwindcss"
+	],
 	"pluginSearchDirs": ["."],
 	"overrides": [
 		{
