--- a/package.json
+++ b/package.json
@@ -21,19 +21,21 @@
 		"@sveltejs/vite-plugin-svelte": "^3.0.2",
 		"@typescript-eslint/eslint-plugin": "^6.21.0",
 		"@typescript-eslint/parser": "^6.21.0",
-		"autoprefixer": "^10.4.19",
+		"autoprefixer": "^10.4.16",
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
+		"flowbite": "^2.3.0",
+		"flowbite-svelte": "^0.44.24",
 		"mdsvex": "^0.11.0",
-		"postcss": "^8.4.38",
+		"postcss": "^8.4.32",
 		"postcss-load-config": "^5.0.2",
 		"prettier": "^3.2.5",
 		"prettier-plugin-svelte": "^3.2.2",
 		"prettier-plugin-tailwindcss": "^0.5.9",
 		"svelte": "^4.2.12",
 		"svelte-check": "^3.6.8",
-		"tailwindcss": "^3.4.3",
+		"tailwindcss": "^3.3.6",
 		"tslib": "^2.6.2",
 		"typescript": "^5.4.3",
 		"vite": "^5.2.7"
@@ -41,7 +43,6 @@
 	"dependencies": {
 		"@fontsource/jetbrains-mono": "^5.0.19",
 		"@fontsource/manrope": "^5.0.19",
-		"flowbite-svelte": "^0.44.24",
 		"flowbite-svelte-icons": "^1.5.0",
 		"lucide-svelte": "^0.323.0",
 		"open-props": "^1.6.21",
@@ -49,6 +50,7 @@
 		"remark-toc": "^9.0.0",
 		"remark-unwrap-images": "^4.0.0",
 		"shiki": "^1.2.2",
+		"svelte-carousel": "^1.0.25",
 		"svelte-parallax": "^0.3.1"
 	}
 }
