--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
 		"remark-unwrap-images": "^4.0.0",
 		"shiki": "^1.2.2",
 		"svelte-carousel": "^1.0.25",
-		"svelte-parallax": "^0.3.1"
+		"svelte-modals": "^1.3.0",
+		"svelte-parallax": "^0.3.1",
+		"svelte-simple-modal": "^1.6.2"
 	}
 }
